postgresql-common (60) unstable; urgency=low

  * Update Czech debconf translations, thanks to Miroslav Kure. 
    Closes: #384757

 -- Martin Pitt <mpitt@debian.org>  Tue,  5 Sep 2006 11:57:29 +0200

postgresql-common (59) unstable; urgency=low

  * t/001_packages.t: Check that p-plpython-X.Y is installed.
  * t/020_create_sql_remove.t: Check that PL/Python works properly.
  * Update French debconf translations, thanks to Guilhelm Panaget
    <guilhelm.panaget@free.fr>. Closes: #382447
  * Add Portugese debconf translations, thanks to Rui Branco
    <ruipb@debianpt.org>. Closes: #381946
  * postgresql-common/debian/postgresql-common.config:
    - Ensure that the 'untransitioned' critical debconf note is always shown,
      not just once. Otherwise the preinst just fails without giving any hint
      about the reason after the first failure.
    - Additionally print a small hint to stderr, for the case that people do
      not use the interactive frontend.
    - Closes: #382134

 -- Martin Pitt <mpitt@debian.org>  Sat, 12 Aug 2006 18:40:21 +0200

postgresql-common (58) unstable; urgency=low

  * pg_wrapper: Improve manpage POD, describe the precise rules for cluster
    selection.
  * t/090_multicluster.t: Check for proper error message of pg_wrapper (no
    suitable default cluster) if several local clusters exist and none are on
    the default port.
  * pg_wrapper: Print proper error message if no cluster is suitable as
    default target and point to man pg_wrapper.
  * pg_upgradecluster:
    - Support /etc/postgresql-common/pg_upgradecluster.d/ hook scripts. These
      are called after creating the virgin new version cluster (phase 'init')
      and a second time after the upgrade is complete (phase 'finish').
      PostgreSQL extensions like PostGIS can use these hooks to initialize
      metadata which must not be upgraded from the old cluster, but
      initialized from scratch. Closes: #351571
    - Document this feature in the manpage POD.